--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "ampere": "^1.0.0",
     "dotenv": "^1.2.0",
+    "ioredis": "^1.9.0",
     "jsonwebtoken": "^5.0.5",
-    "node-redis-pubsub": "^0.6.0",
     "primus": "^3.2.3",
     "sockjs": "^0.3.15",
     "underscore": "^1.8.3"
